
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int rw; } ;
typedef TYPE_1__ DissectedPartition ;


 int WRITE_STRING_FILE_CREATE ;
 int WRITE_STRING_FILE_MKDIR_0755 ;
 int WRITE_STRING_FILE_NOFOLLOW ;
 int arg_dest ;
 scalar_t__ arg_root_rw ;
 int assert (TYPE_1__*) ;
 int generator_enable_remount_fs_service (int ) ;
 scalar_t__ in_initrd () ;
 int log_debug (char*) ;
 int log_error_errno (int,char*,char const*) ;
 char* strjoina (int ,char*) ;
 int write_string_file (char const*,char*,int) ;

__attribute__((used)) static int add_root_rw(DissectedPartition *p) {
        const char *path;
        int r;

        assert(p);

        if (in_initrd()) {
                log_debug("In initrd, not generating drop-in for systemd-remount-fs.service.");
                return 0;
        }

        if (arg_root_rw >= 0) {
                log_debug("Parameter ro/rw specified on kernel command line, not generating drop-in for systemd-remount-fs.service.");
                return 0;
        }

        if (!p->rw) {
                log_debug("Root partition marked read-only in GPT partition table, not generating drop-in for systemd-remount-fs.service.");
                return 0;
        }

        (void) generator_enable_remount_fs_service(arg_dest);

        path = strjoina(arg_dest, "/systemd-remount-fs.service.d/50-remount-rw.conf");

        r = write_string_file(path,
                              "# Automatically generated by systemd-gpt-generator\n\n"
                              "[Service]\n"
                              "Environment=SYSTEMD_REMOUNT_ROOT_RW=1\n",
                              WRITE_STRING_FILE_CREATE|WRITE_STRING_FILE_NOFOLLOW|WRITE_STRING_FILE_MKDIR_0755);
        if (r < 0)
                return log_error_errno(r, "Failed to write drop-in file %s: %m", path);

        return 0;
}
